--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ fonttools==4.58.5
 fqdn==1.5.1
 fsspec==2025.9.0
 future==1.0.0
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -95,6 +96,7 @@ platformdirs==4.3.8
 prometheus_client==0.22.1
 prompt_toolkit==3.0.51
 psutil==7.0.0
+psycopg2-binary==2.9.11
 pure_eval==0.2.3
 pycparser==2.22
 pygal==3.0.0
@@ -146,4 +148,5 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+whitenoise==6.11.0
 wsproto==1.2.0
